# Face_Verification

./: AUTHORS  INSTALLATION.md  PRIVACY_POLICY.md  QUICKSTART.md  README.md  ROLES.md  ROLES_SUMMARY.md  ROLE_NAMING.md  SETUP_GUIDE.md  STAFF_GUIDE.md  pyproject.toml  requirements.txt  setup.py
age_verification_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: config.json
src/: __init__.py  bot.py
src/cogs/: __init__.py  admin.py  admin_control.py  advanced_features.py  appeals.py  automod.py  moderation.py  privacy.py  statistics.py  verification.py
src/utils/: __init__.py  database.py  face_detection.py
